--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <nav class="navbar" role="navigation">
-    <a href="main.html" class="brand">Santiago Segret</a>
+    <a href="https://rupulo-ediciones.web.app" class="brand">Ingreso a Rúpulo Ediciones</a>
     <button class="menu-toggle" aria-label="Menú">&#9776;</button>
     <ul>
       <li><a href="#inicio">Inicio</a></li>
@@ -35,7 +35,7 @@
     <section class="seccion" id="inicio">
       <div
         style="text-align:center; margin-bottom:18px; color:#e3e3e3; font-size:1.3em; font-weight:500; letter-spacing:0.02em;">
-        Santiago Segret, músico bandoneonista especializado en música argentina
+        Santiago Segret, músico y bandoneonista
       </div>
       <div class="video-background">
         <iframe class="lazy-video"
