--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
 <body>
   <nav class="navbar" role="navigation">
-    <a href="https://rupulo-ediciones.web.app" class="brand">Ingreso a Rúpulo Ediciones</a>
     <button class="menu-toggle" aria-label="Menú">&#9776;</button>
     <ul>
       <li><a href="#inicio">Inicio</a></li>
@@ -323,127 +322,133 @@
 
     <!-- SECCIÓN BIO -->
     <section class="seccion" id="bio">
-
-      <h3>Actualmente</h3>
-      <div class="bio-section">
-        <p>
-          Da clases de bandoneón y piano de forma privada desde 2005.<br>
-          Lleva adelante Rúpulo Ediciones.<br>
-          Integra el trío Patio que comparte con Andrés Pilar y Juan Quintero desde 2013.<br>
-          Actúa en colaboración con el Diego Schissi Quinteto desde el 2009.<br>
-        </p>
-        <p>
-          Trabaja en los siguientes cargos institucionales:<br>
-          - Asistente de dirección de la Orquesta de Tango de la UNA dirigida por Ariel Pirotti.<br>
-          - Profesor de bandoneón en el conservatorio de la ciudad de Buenos Aires “Astor Piazzolla” desde (2018?).<br>
-          - Profesor de bandoneón en la Universidad Nacional de San Martín desde (2013?).<br>
-        </p>
+      <!-- Menú interno de pestañas para Bio -->
+      <div class="bio-tabs">
+        <ul class="tab-menu">
+          <li><a href="#" class="active" data-tab="actualmente">Actualmente</a></li>
+          <li><a href="#" data-tab="formacion">Formación</a></li>
+        </ul>
       </div>
-
-      <h3>Formación</h3>
-      <div class="bio-section">
-        <p>
-          En 2005 realizó el programa de la Orquesta Escuela de Tango Emilio Balcarce. En aquel entonces el director era
-          Balcarce y los profesores eran Federico Pereiro, Ignacio Varchausky, Ramiro Gallo, Andrés Linezky, Germán
-          Martínez, compartiendo música con grandes maestros como Victor Lavallén, Raúl Garello, Lidia Borda, José
-          Colángelo, Néstor Marconi, entre otros.
-        </p>
-
-        <div class="bio-media">
-          <img
-            src="https://firebasestorage.googleapis.com/v0/b/rupulo-ediciones.firebasestorage.app/o/fotos%2Fcon%20emilio%20balcarce%20en%20el%20pante%C3%B3n%20de%20roma.jpg?alt=media&token=9ae060ef-8581-4073-98f4-398f6b357aec"
-            alt="Foto con Emilio" width="280" loading="lazy">
-          <h4 class="epigrafe">Foto con Emilio Balcarce en el Panteón de Roma</h4>
-        </div>
-
-        <p>
-          En esos años conoció más de 20 países con diferentes grupos, especialmente con la Orquesta de Érica Di Salvo.
-        </p>
-
-        <div class="bio-media">
-          <iframe class="lazy-video" data-src="https://www.youtube.com/embed/gJ1iHV5GLf8" allowfullscreen width="280"
-            height="157"></iframe>
-          <h4 class="epigrafe">Mediometraje de la gira a Japón con la Orquesta de Érica Di Salvo</h4>
-        </div>
-
-        <p>
-          En 2019 se gradúa con el título de Licenciado en Artes Musicales con Orientación en Composición en la UNA
-          (Universidad Nacional de las Artes).
-        </p>
-
-        <div class="bio-media">
-          <iframe class="lazy-video" data-src="https://www.youtube.com/embed/-oRJ49h56EY" frameborder="0"
-            allowfullscreen width="280" height="157"></iframe>
-          <h4 class="epigrafe">"Libro de Bucles" – Trabajo final de la carrera</h4>
-        </div>
-
-        <p>
-          De 2013 a 2015 integró la Orquesta del Tango de la Ciudad de Buenos Aires dirigida en aquel entonces por Raúl
-          Garello, Néstor Marconi y Carlos Cuacci.
-        </p>
-
-        <div class="bio-media">
-          <iframe class="lazy-video" data-src="https://www.youtube.com/embed/ULfJkO40yQA" frameborder="0"
-            allowfullscreen width="280" height="157"></iframe>
-          <h4 class="epigrafe">Video de Japón con la Orquesta del Tango de la Ciudad</h4>
-        </div>
-
-        <p>
-          También compartió grabaciones y escenarios con Leopoldo Federico, Raúl Garello, Victor Lavallén, Vitillo
-          Ábalos, Susana Rinaldi, Amelita Baltar, Nadia Larcher, Luna Monti, Naty Peluso, Pablo Estigarribia, Jorge
-          Fandermole, Mono Fontana, Marcelo Moguilevsky.
-        </p>
-      </div>
-
-      <h3>Inicios</h3>
-      <div class="bio-section">
-        <p>
-          Santiago Segret nació el 5 de mayo del '88 en Illinois y desde los 4 años vive en Buenos Aires. De chico
-          jugaba con el piano vertical de su abuelo Horacio en Almagro, tarareaba con su mamá y acompañaba con el bombo
-          a su papá. Comenzó a tocar el bandoneón a los 7 de la mano de Osvaldo "el Marinero" Montes.
-        </p>
-
-        <div class="bio-media">
-          <iframe class="lazy-video" data-src="https://www.youtube.com/embed/KruYi0FP8so" frameborder="0"
-            allowfullscreen width="280" height="157"></iframe>
-          <img src="04) Fotos/con el marinero montes.jpg" alt="Foto con el Marinero" width="280" loading="lazy">
-          <h4 class="epigrafe">Tocando "Caminito" y foto con el Marinero Montes</h4>
-        </div>
-
-        <p>
-          Alrededor de los 10 años tomó clases de piano con Liliana Campos. A los 15 debuta como telonero de Javier
-          Malosetti en La Trastienda tocando solos de Piazzolla.
-        </p>
-
-        <div class="audio-container" style="display: flex; flex-direction: column; align-items: flex-start; gap: 10px;">
-          <h4 class="epigrafe">Grabaciones en La Trastienda: "Mi Refugio" y "La Familia"</h4>
-          <div class="audio-item" style="display: flex; align-items: center; gap: 10px;">
-            <p style="margin: 0; font-size: 12px;"><strong>Mi Refugio:</strong></p>
-            <audio controls style="width: 300px; height: 30px;">
-              <source src="audio/Versión-editada-separada-Mi-Refugio.mp3" type="audio/mpeg">
-              Tu navegador no soporta el elemento de audio.
-            </audio>
-          </div>
-          <div class="audio-item" style="display: flex; align-items: center; gap: 10px;">
-            <p style="margin: 0; font-size: 12px;"><strong>La Familia:</strong></p>
-            <audio controls style="width: 300px; height: 30px;">
-              <source src="audio/Versión-editada-separada-La-Familia.mp3" type="audio/mpeg">
-              Tu navegador no soporta el elemento de audio.
-            </audio>
+      <!-- Contenedor de pestañas -->
+      <div class="tab-content">
+        <!-- Pestaña Actualmente -->
+        <div class="tab-pane active" id="actualmente">
+          <h3>Actualmente</h3>
+          <div class="bio-section bio-margins">
+            <p>
+              Da clases de bandoneón y piano de forma privada desde 2005.<br>
+              Lleva adelante Rúpulo Ediciones.<br>
+              Integra el trío Patio que comparte con Andrés Pilar y Juan Quintero desde 2013.<br>
+              Actúa en colaboración con el Diego Schissi Quinteto desde el 2009.<br>
+            </p>
+            <p>
+              Trabaja en los siguientes cargos institucionales:<br>
+              - Asistente de dirección de la Orquesta de Tango de la UNA dirigida por Ariel Pirotti.<br>
+              - Profesor de bandoneón en el conservatorio de la ciudad de Buenos Aires “Astor Piazzolla” desde
+              (2018?).<br>
+              - Profesor de bandoneón en la Universidad Nacional de San Martín desde (2013?).<br>
+            </p>
           </div>
         </div>
-      </div>
-
-      <p>
-        Cursó el programa educativo llevado adelante por Hilda Herrera llamado CIMAP: Creadores e Intérpretes de
-        Música Argentina en Piano.
-      </p>
-
-      <p>
-        A lo largo de su adolescencia y hacia la juventud estudió bandoneón con: Pablo Mainetti, Julio Pane, Mariano
-        "Paya" Cigna, Federico Pereiro y con Carlos Lazzari a los 18 años.
-      </p>
-
+        <!-- Pestaña Formación -->
+        <div class="tab-pane" id="formacion">
+          <h3>Formación</h3>
+          <div class="bio-section bio-margins">
+            <p>
+              En 2005 realizó el programa de la Orquesta Escuela de Tango Emilio Balcarce. En aquel entonces el director
+              era
+              Balcarce y los profesores eran Federico Pereiro, Ignacio Varchausky, Ramiro Gallo, Andrés Linezky, Germán
+              Martínez, compartiendo música con grandes maestros como Victor Lavallén, Raúl Garello, Lidia Borda, José
+              Colángelo, Néstor Marconi, entre otros.
+            </p>
+            <div class="bio-media">
+              <img
+                src="https://firebasestorage.googleapis.com/v0/b/rupulo-ediciones.firebasestorage.app/o/fotos%2Fcon%20emilio%20balcarce%20en%20el%20pante%C3%B3n%20de%20roma.jpg?alt=media&token=9ae060ef-8581-4073-98f4-398f6b357aec"
+                alt="Foto con Emilio" width="280" loading="lazy">
+              <h4 class="epigrafe">Foto con Emilio Balcarce en el Panteón de Roma</h4>
+            </div>
+            <p>
+              En esos años conoció más de 20 países con diferentes grupos, especialmente con la Orquesta de Érica Di
+              Salvo.
+            </p>
+            <div class="bio-media">
+              <iframe class="lazy-video" data-src="https://www.youtube.com/embed/gJ1iHV5GLf8" allowfullscreen
+                width="280" height="157"></iframe>
+              <h4 class="epigrafe">Mediometraje de la gira a Japón con la Orquesta de Érica Di Salvo</h4>
+            </div>
+            <p>
+              En 2019 se gradúa con el título de Licenciado en Artes Musicales con Orientación en Composición en la UNA
+              (Universidad Nacional de las Artes).
+            </p>
+            <div class="bio-media">
+              <iframe class="lazy-video" data-src="https://www.youtube.com/embed/-oRJ49h56EY" frameborder="0"
+                allowfullscreen width="280" height="157"></iframe>
+              <h4 class="epigrafe">"Libro de Bucles" – Trabajo final de la carrera</h4>
+            </div>
+            <p>
+              De 2013 a 2015 integró la Orquesta del Tango de la Ciudad de Buenos Aires dirigida en aquel entonces por
+              Raúl
+              Garello, Néstor Marconi y Carlos Cuacci.
+            </p>
+            <div class="bio-media">
+              <iframe class="lazy-video" data-src="https://www.youtube.com/embed/ULfJkO40yQA" frameborder="0"
+                allowfullscreen width="280" height="157"></iframe>
+              <h4 class="epigrafe">Video de Japón con la Orquesta del Tango de la Ciudad</h4>
+            </div>
+            <p>
+              También compartió grabaciones y escenarios con Leopoldo Federico, Raúl Garello, Victor Lavallén, Vitillo
+              Ábalos, Susana Rinaldi, Amelita Baltar, Nadia Larcher, Luna Monti, Naty Peluso, Pablo Estigarribia, Jorge
+              Fandermole, Mono Fontana, Marcelo Moguilevsky.
+            </p>
+            <h3>Inicios</h3>
+            <div class="bio-section">
+              <p>
+                Santiago Segret nació el 5 de mayo del '88 en Illinois y desde los 4 años vive en Buenos Aires. De chico
+                jugaba con el piano vertical de su abuelo Horacio en Almagro, tarareaba con su mamá y acompañaba con el
+                bombo
+                a su papá. Comenzó a tocar el bandoneón a los 7 de la mano de Osvaldo "el Marinero" Montes.
+              </p>
+              <div class="bio-media">
+                <iframe class="lazy-video" data-src="https://www.youtube.com/embed/KruYi0FP8so" frameborder="0"
+                  allowfullscreen width="280" height="157"></iframe>
+                <img src="04) Fotos/con el marinero montes.jpg" alt="Foto con el Marinero" width="280" loading="lazy">
+                <h4 class="epigrafe">Tocando "Caminito" y foto con el Marinero Montes</h4>
+              </div>
+              <p>
+                Alrededor de los 10 años tomó clases de piano con Liliana Campos. A los 15 debuta como telonero de
+                Javier
+                Malosetti en La Trastienda tocando solos de Piazzolla.
+              </p>
+              <div class="audio-container"
+                style="display: flex; flex-direction: column; align-items: flex-start; gap: 10px;">
+                <h4 class="epigrafe">Grabaciones en La Trastienda: "Mi Refugio" y "La Familia"</h4>
+                <div class="audio-item" style="display: flex; align-items: center; gap: 10px;">
+                  <p style="margin: 0; font-size: 12px;"><strong>Mi Refugio:</strong></p>
+                  <audio controls style="width: 300px; height: 30px;">
+                    <source src="audio/Versión-editada-separada-Mi-Refugio.mp3" type="audio/mpeg">
+                    Tu navegador no soporta el elemento de audio.
+                  </audio>
+                </div>
+                <div class="audio-item" style="display: flex; align-items: center; gap: 10px;">
+                  <p style="margin: 0; font-size: 12px;"><strong>La Familia:</strong></p>
+                  <audio controls style="width: 300px; height: 30px;">
+                    <source src="audio/Versión-editada-separada-La-Familia.mp3" type="audio/mpeg">
+                    Tu navegador no soporta el elemento de audio.
+                  </audio>
+                </div>
+              </div>
+            </div>
+            <p>
+              Cursó el programa educativo llevado adelante por Hilda Herrera llamado CIMAP: Creadores e Intérpretes de
+              Música Argentina en Piano.
+            </p>
+            <p>
+              A lo largo de su adolescencia y hacia la juventud estudió bandoneón con: Pablo Mainetti, Julio Pane,
+              Mariano
+              "Paya" Cigna, Federico Pereiro y con Carlos Lazzari a los 18 años.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
 
