--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <nav class="navbar" role="navigation">
     <button class="menu-toggle" aria-label="Menú">&#9776;</button>
-    <ul>
+    <ul class="tab-menu">
       <li><a href="#inicio">Inicio</a></li>
       <li><a href="#videos">Videos</a></li>
       <li><a href="#bio">Bio</a></li>
