--- a/index.html
+++ b/index.html
@@ -335,21 +335,25 @@
         <!-- Pestaña Actualmente -->
         <div class="tab-pane active" id="actualmente">
           <div class="bio-section bio-margins">
-            <p>
-              Da clases de bandoneón y piano de forma privada desde 2005.<br>
-              Lleva adelante Rúpulo Ediciones.<br>
-              Integra el trío Patio que comparte con Andrés Pilar y Juan Quintero desde 2013.<br>
-              Actúa en colaboración con el Diego Schissi Quinteto desde el 2009.<br>
-            </p>
-            <p>
-              Trabaja en los siguientes cargos institucionales:<br>
-              - Asistente de dirección de la Orquesta de Tango de la UNA dirigida por Ariel Pirotti.<br>
-              - Profesor de bandoneón en el conservatorio de la ciudad de Buenos Aires “Astor Piazzolla” desde
-              (2018?).<br>
-              - Profesor de bandoneón en la Universidad Nacional de San Martín desde (2013?).<br>
-            </p>
+            <ul>
+              <li>Da clases de <strong>bandoneón</strong> y <strong>piano</strong> de forma privada desde
+                <strong>2005</strong>.
+              </li>
+              <li>Lleva adelante <strong>Rúpulo Ediciones</strong>.</li>
+              <li>Integra el trío <strong>Patio</strong>, junto a Andrés Pilar y Juan Quintero, desde
+                <strong>2013</strong>.
+              </li>
+              <li>Actúa en colaboración con el <strong>Diego Schissi Quinteto</strong> desde <strong>2009</strong>.</li>
+              <li>Es asistente de dirección de la <strong>Orquesta de Tango de la UNA</strong>, dirigida por Ariel
+                Pirotti.</li>
+              <li>Es profesor de <strong>bandoneón</strong> en el <strong>Conservatorio “Astor Piazzolla”</strong> de la
+                ciudad de Buenos Aires (desde 2018).</li>
+              <li>Es profesor de <strong>bandoneón</strong> en la <strong>Universidad Nacional de San Martín</strong>
+                (desde 2013).</li>
+            </ul>
           </div>
         </div>
+
         <!-- Pestaña Formación -->
         <div class="tab-pane" id="formacion">
           <h3>Formación</h3>
