--- a/index.html
+++ b/index.html
@@ -357,13 +357,12 @@
         <!-- Pestaña Formación -->
         <div class="tab-pane" id="formacion">
           <h3>Formación</h3>
-          <div class="bio-section bio-margins">
+          <div class="bio-section bio-margins" style="line-height:1.7;">
             <p>
               En 2005 realizó el programa de la Orquesta Escuela de Tango Emilio Balcarce. En aquel entonces el director
-              era
-              Balcarce y los profesores eran Federico Pereiro, Ignacio Varchausky, Ramiro Gallo, Andrés Linezky, Germán
-              Martínez, compartiendo música con grandes maestros como Victor Lavallén, Raúl Garello, Lidia Borda, José
-              Colángelo, Néstor Marconi, entre otros.
+              era Balcarce y los profesores eran Federico Pereiro, Ignacio Varchausky, Ramiro Gallo, Andrés Linezky,
+              Germán Martínez, compartiendo música con grandes maestros como Victor Lavallén, Raúl Garello, Lidia Borda,
+              José Colángelo, Néstor Marconi, entre otros.
             </p>
             <div class="bio-media">
               <img
@@ -391,8 +390,7 @@
             </div>
             <p>
               De 2013 a 2015 integró la Orquesta del Tango de la Ciudad de Buenos Aires dirigida en aquel entonces por
-              Raúl
-              Garello, Néstor Marconi y Carlos Cuacci.
+              Raúl Garello, Néstor Marconi y Carlos Cuacci.
             </p>
             <div class="bio-media">
               <iframe class="lazy-video" data-src="https://www.youtube.com/embed/ULfJkO40yQA" frameborder="0"
@@ -404,95 +402,40 @@
               Ábalos, Susana Rinaldi, Amelita Baltar, Nadia Larcher, Luna Monti, Naty Peluso, Pablo Estigarribia, Jorge
               Fandermole, Mono Fontana, Marcelo Moguilevsky.
             </p>
-            <h3>Inicios</h3>
-            <div class="bio-section">
-              <p>
-                Santiago Segret nació el 5 de mayo del '88 en Illinois y desde los 4 años vive en Buenos Aires. De chico
-                jugaba con el piano vertical de su abuelo Horacio en Almagro, tarareaba con su mamá y acompañaba con el
-                bombo
-                a su papá. Comenzó a tocar el bandoneón a los 7 de la mano de Osvaldo "el Marinero" Montes.
-              </p>
-              <div class="bio-media">
-                <iframe class="lazy-video" data-src="https://www.youtube.com/embed/KruYi0FP8so" frameborder="0"
-                  allowfullscreen width="280" height="157"></iframe>
-                <img src="04) Fotos/con el marinero montes.jpg" alt="Foto con el Marinero" width="280" loading="lazy">
-                <h4 class="epigrafe">Tocando "Caminito" y foto con el Marinero Montes</h4>
+          </div>
+          <h3>Inicios</h3>
+          <div class="bio-section bio-margins" style="line-height:1.7;">
+            <p>
+              Santiago Segret nació el 5 de mayo del '88 en Illinois y desde los 4 años vive en Buenos Aires. De chico
+              jugaba con el piano vertical de su abuelo Horacio en Almagro, tarareaba con su mamá y acompañaba con el
+              bombo a su papá. Comenzó a tocar el bandoneón a los 7 de la mano de Osvaldo "el Marinero" Montes.
+            </p>
+            <div class="bio-media">
+              <iframe class="lazy-video" data-src="https://www.youtube.com/embed/KruYi0FP8so" frameborder="0"
+                allowfullscreen width="280" height="157"></iframe>
+              <img src="04) Fotos/con el marinero montes.jpg" alt="Foto con el Marinero" width="280" loading="lazy">
+              <h4 class="epigrafe">Tocando "Caminito" y foto con el Marinero Montes</h4>
+            </div>
+            <p>
+              Alrededor de los 10 años tomó clases de piano con Liliana Campos. A los 15 debuta como telonero de Javier
+              Malosetti en La Trastienda tocando solos de Piazzolla.
+            </p>
+            <div class="audio-container"
+              style="display: flex; flex-direction: column; align-items: flex-start; gap: 10px;">
+              <h4 class="epigrafe">Grabaciones en La Trastienda: "Mi Refugio" y "La Familia"</h4>
+              <div class="audio-item" style="display: flex; align-items: center; gap: 10px;">
+                <p style="margin: 0; font-size: 12px;"><strong>Mi Refugio:</strong></p>
+                <audio controls style="width: 300px; height: 30px;">
+                  <source src="audio/Versión-editada-separada-Mi-Refugio.mp3" type="audio/mpeg">
+                  Tu navegador no soporta el elemento de audio.
+                </audio>
               </div>
-              <p>
-                Alrededor de los 10 años tomó clases de piano con Liliana Campos. A los 15 debuta como telonero de
-                Javier
-                Malosetti en La Trastienda tocando solos de Piazzolla.
-              </p>
-              <div class="audio-container"
-                style="display: flex; flex-direction: column; align-items: flex-start; gap: 10px;">
-                <h4 class="epigrafe">Grabaciones en La Trastienda: "Mi Refugio" y "La Familia"</h4>
-                <!-- Pestaña Inicios -->
-                <div class="tab-pane" id="inicios">
-                  <h3>Inicios</h3>
-                  <div class="bio-section bio-margins">
-                    <p>
-                      Santiago Segret nació el 5 de mayo del '88 en Illinois y desde los 4 años vive en Buenos Aires. De
-                      chico
-                      jugaba con el piano vertical de su abuelo Horacio en Almagro, tarareaba con su mamá y acompañaba
-                      con el bombo
-                      a su papá. Comenzó a tocar el bandoneón a los 7 de la mano de Osvaldo "el Marinero" Montes.
-                    </p>
-                    <div class="bio-media">
-                      <iframe class="lazy-video" data-src="https://www.youtube.com/embed/KruYi0FP8so" frameborder="0"
-                        allowfullscreen width="280" height="157"></iframe>
-                      <img src="04) Fotos/con el marinero montes.jpg" alt="Foto con el Marinero" width="280"
-                        loading="lazy">
-                      <h4 class="epigrafe">Tocando "Caminito" y foto con el Marinero Montes</h4>
-                    </div>
-                    <p>
-                      Alrededor de los 10 años tomó clases de piano con Liliana Campos. A los 15 debuta como telonero de
-                      Javier
-                      Malosetti en La Trastienda tocando solos de Piazzolla.
-                    </p>
-                    <div class="audio-container"
-                      style="display: flex; flex-direction: column; align-items: flex-start; gap: 10px;">
-                      <h4 class="epigrafe">Grabaciones en La Trastienda: "Mi Refugio" y "La Familia"</h4>
-                      <div class="audio-item" style="display: flex; align-items: center; gap: 10px;">
-                        <p style="margin: 0; font-size: 12px;"><strong>Mi Refugio:</strong></p>
-                        <audio controls style="width: 300px; height: 30px;">
-                          <source src="audio/Versión-editada-separada-Mi-Refugio.mp3" type="audio/mpeg">
-                          Tu navegador no soporta el elemento de audio.
-                        </audio>
-                      </div>
-                      <div class="audio-item" style="display: flex; align-items: center; gap: 10px;">
-                        <p style="margin: 0; font-size: 12px;"><strong>La Familia:</strong></p>
-                        <audio controls style="width: 300px; height: 30px;">
-                          <source src="audio/Versión-editada-separada-La-Familia.mp3" type="audio/mpeg">
-                          Tu navegador no soporta el elemento de audio.
-                        </audio>
-                      </div>
-                    </div>
-                    <p>
-                      Cursó el programa educativo llevado adelante por Hilda Herrera llamado CIMAP: Creadores e
-                      Intérpretes de
-                      Música Argentina en Piano.
-                    </p>
-                    <p>
-                      A lo largo de su adolescencia y hacia la juventud estudió bandoneón con: Pablo Mainetti, Julio
-                      Pane, Mariano
-                      "Paya" Cigna, Federico Pereiro y con Carlos Lazzari a los 18 años.
-                    </p>
-                  </div>
-                </div>
-                <div class="audio-item" style="display: flex; align-items: center; gap: 10px;">
-                  <p style="margin: 0; font-size: 12px;"><strong>Mi Refugio:</strong></p>
-                  <audio controls style="width: 300px; height: 30px;">
-                    <source src="audio/Versión-editada-separada-Mi-Refugio.mp3" type="audio/mpeg">
-                    Tu navegador no soporta el elemento de audio.
-                  </audio>
-                </div>
-                <div class="audio-item" style="display: flex; align-items: center; gap: 10px;">
-                  <p style="margin: 0; font-size: 12px;"><strong>La Familia:</strong></p>
-                  <audio controls style="width: 300px; height: 30px;">
-                    <source src="audio/Versión-editada-separada-La-Familia.mp3" type="audio/mpeg">
-                    Tu navegador no soporta el elemento de audio.
-                  </audio>
-                </div>
+              <div class="audio-item" style="display: flex; align-items: center; gap: 10px;">
+                <p style="margin: 0; font-size: 12px;"><strong>La Familia:</strong></p>
+                <audio controls style="width: 300px; height: 30px;">
+                  <source src="audio/Versión-editada-separada-La-Familia.mp3" type="audio/mpeg">
+                  Tu navegador no soporta el elemento de audio.
+                </audio>
               </div>
             </div>
             <p>
@@ -501,8 +444,7 @@
             </p>
             <p>
               A lo largo de su adolescencia y hacia la juventud estudió bandoneón con: Pablo Mainetti, Julio Pane,
-              Mariano
-              "Paya" Cigna, Federico Pereiro y con Carlos Lazzari a los 18 años.
+              Mariano "Paya" Cigna, Federico Pereiro y con Carlos Lazzari a los 18 años.
             </p>
           </div>
         </div>
