--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <ul class="tab-menu">
       <li><a href="#inicio">Inicio</a></li>
       <li><a href="#videos">Videos</a></li>
-      <li><a href="#bio">Bio</a></li>
       <li><a href="#premios">Premios</a></li>
+      <li><a href="#bio">Bio</a></li>
       <li><a href="#fotos">Fotos</a></li>
       <li><a href="#contacto">Contacto</a></li>
     </ul>
@@ -336,10 +336,7 @@
         <div class="tab-pane active" id="actualmente">
           <div class="bio-section bio-margins">
             <ul>
-              <li>Da clases de <strong>bandoneón</strong> y <strong>piano</strong> de forma privada desde
-                <strong>2005</strong>.
-              </li>
-              <li>Lleva adelante <strong>Rúpulo Ediciones</strong>.</li>
+
               <li>Integra el trío <strong>Patio</strong>, junto a Andrés Pilar y Juan Quintero, desde
                 <strong>2013</strong>.
               </li>
@@ -350,6 +347,10 @@
                 ciudad de Buenos Aires (desde 2018).</li>
               <li>Es profesor de <strong>bandoneón</strong> en la <strong>Universidad Nacional de San Martín</strong>
                 (desde 2013).</li>
+              <li>Da clases de <strong>bandoneón</strong> y <strong>piano</strong> de forma privada desde
+                <strong>2005</strong>.
+              </li>
+              <li>Lleva adelante <strong>Rúpulo Ediciones</strong>.</li>
             </ul>
           </div>
         </div>
@@ -357,7 +358,7 @@
         <!-- Pestaña Formación -->
         <div class="tab-pane" id="formacion">
           <h3>Formación</h3>
-          <div class="bio-section bio-margins" style="line-height:1.7;">
+          <div class="bio-section bio-margins" style="line-height:1.3;">
             <p>
               En 2005 realizó el programa de la Orquesta Escuela de Tango Emilio Balcarce. En aquel entonces el director
               era Balcarce y los profesores eran Federico Pereiro, Ignacio Varchausky, Ramiro Gallo, Andrés Linezky,
@@ -403,8 +404,11 @@
               Fandermole, Mono Fontana, Marcelo Moguilevsky.
             </p>
           </div>
+        </div>
+        <!-- Mover la pestaña Inicios aquí, al mismo nivel que las otras pestañas -->
+        <div class="tab-pane" id="inicios">
           <h3>Inicios</h3>
-          <div class="bio-section bio-margins" style="line-height:1.7;">
+          <div class="bio-section bio-margins" style="line-height:1.3;">
             <p>
               Santiago Segret nació el 5 de mayo del '88 en Illinois y desde los 4 años vive en Buenos Aires. De chico
               jugaba con el piano vertical de su abuelo Horacio en Almagro, tarareaba con su mamá y acompañaba con el
@@ -417,7 +421,8 @@
               <h4 class="epigrafe">Tocando "Caminito" y foto con el Marinero Montes</h4>
             </div>
             <p>
-              Alrededor de los 10 años tomó clases de piano con Liliana Campos. A los 15 debuta como telonero de Javier
+              Alrededor de los 10 años tomó clases de piano con Liliana Campos. A los 15 debuta como telonero de
+              Javier
               Malosetti en La Trastienda tocando solos de Piazzolla.
             </p>
             <div class="audio-container"
@@ -448,6 +453,7 @@
             </p>
           </div>
         </div>
+      </div>
       </div>
     </section>
 
