--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <li><a href="#" data-tab="bach">Bach</a></li>
           <li><a href="#" data-tab="composicion">Composición</a></li>
           <li><a href="#" data-tab="patio">Patio</a></li>
-          <li><a href="#" data-tab="dsq">Quinteto</a></li>
+          <li><a href="#" data-tab="dsq">DSQ Quinteto</a></li>
           <li><a href="#" data-tab="piano">Piano</a></li>
         </ul>
       </div>
@@ -358,28 +358,8 @@
         <!-- Pestaña Formación -->
         <div class="tab-pane" id="formacion">
           <h3>Formación</h3>
-          <div class="bio-section bio-margins" style="line-height:1.3;">
-            <p>
-              En 2005 realizó el programa de la Orquesta Escuela de Tango Emilio Balcarce. En aquel entonces el director
-              era Balcarce y los profesores eran Federico Pereiro, Ignacio Varchausky, Ramiro Gallo, Andrés Linezky,
-              Germán Martínez, compartiendo música con grandes maestros como Victor Lavallén, Raúl Garello, Lidia Borda,
-              José Colángelo, Néstor Marconi, entre otros.
-            </p>
-            <div class="bio-media">
-              <img
-                src="https://firebasestorage.googleapis.com/v0/b/rupulo-ediciones.firebasestorage.app/o/fotos%2Fcon%20emilio%20balcarce%20en%20el%20pante%C3%B3n%20de%20roma.jpg?alt=media&token=9ae060ef-8581-4073-98f4-398f6b357aec"
-                alt="Foto con Emilio" width="280" loading="lazy">
-              <h4 class="epigrafe">Foto con Emilio Balcarce en el Panteón de Roma</h4>
-            </div>
-            <p>
-              En esos años conoció más de 20 países con diferentes grupos, especialmente con la Orquesta de Érica Di
-              Salvo.
-            </p>
-            <div class="bio-media">
-              <iframe class="lazy-video" data-src="https://www.youtube.com/embed/gJ1iHV5GLf8" allowfullscreen
-                width="280" height="157"></iframe>
-              <h4 class="epigrafe">Mediometraje de la gira a Japón con la Orquesta de Érica Di Salvo</h4>
-            </div>
+          <div class="bio-section bio-margins">
+
             <p>
               En 2019 se gradúa con el título de Licenciado en Artes Musicales con Orientación en Composición en la UNA
               (Universidad Nacional de las Artes).
@@ -403,12 +383,33 @@
               Ábalos, Susana Rinaldi, Amelita Baltar, Nadia Larcher, Luna Monti, Naty Peluso, Pablo Estigarribia, Jorge
               Fandermole, Mono Fontana, Marcelo Moguilevsky.
             </p>
+            <p>
+              En 2005 realizó el programa de la Orquesta Escuela de Tango Emilio Balcarce. En aquel entonces el director
+              era Balcarce y los profesores eran Federico Pereiro, Ignacio Varchausky, Ramiro Gallo, Andrés Linezky,
+              Germán Martínez, compartiendo música con grandes maestros como Victor Lavallén, Raúl Garello, Lidia Borda,
+              José Colángelo, Néstor Marconi, entre otros.
+            </p>
+            <div class="bio-media">
+              <img
+                src="https://firebasestorage.googleapis.com/v0/b/rupulo-ediciones.firebasestorage.app/o/fotos%2Fcon%20emilio%20balcarce%20en%20el%20pante%C3%B3n%20de%20roma.jpg?alt=media&token=9ae060ef-8581-4073-98f4-398f6b357aec"
+                alt="Foto con Emilio" width="280" loading="lazy">
+              <h4 class="epigrafe">Foto con Emilio Balcarce en el Panteón de Roma</h4>
+            </div>
+            <p>
+              En esos años conoció más de 20 países con diferentes grupos, especialmente con la Orquesta de Érica Di
+              Salvo.
+            </p>
+            <div class="bio-media">
+              <iframe class="lazy-video" data-src="https://www.youtube.com/embed/gJ1iHV5GLf8" allowfullscreen
+                width="280" height="157"></iframe>
+              <h4 class="epigrafe">Mediometraje de la gira a Japón con la Orquesta de Érica Di Salvo</h4>
+            </div>
           </div>
         </div>
         <!-- Mover la pestaña Inicios aquí, al mismo nivel que las otras pestañas -->
         <div class="tab-pane" id="inicios">
           <h3>Inicios</h3>
-          <div class="bio-section bio-margins" style="line-height:1.3;">
+          <div class="bio-section bio-margins">
             <p>
               Santiago Segret nació el 5 de mayo del '88 en Illinois y desde los 4 años vive en Buenos Aires. De chico
               jugaba con el piano vertical de su abuelo Horacio en Almagro, tarareaba con su mamá y acompañaba con el
