--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <title>Santiago Segret - Músico</title>
   <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+
+  <!-- YouTube IFrame Player API -->
+  <script src="https://www.youtube.com/iframe_api"></script>
 </head>
 <!-- necesito que al hacer click en santiagosegret redirija a main -->
 
