--- a/index.html
+++ b/index.html
@@ -328,32 +328,29 @@
       <!-- Menú interno de pestañas para Bio -->
       <div class="bio-tabs">
         <ul class="tab-menu">
-          <li><a href="#" class="active" data-tab="actualmente">Actualmente</a></li>
+          <li><a href="#" class="active" data-tab="actual">Actual</a></li>
           <li><a href="#" data-tab="formacion">Formación</a></li>
           <li><a href="#" data-tab="inicios">Inicios</a></li>
         </ul>
       </div>
       <!-- Contenedor de pestañas -->
       <div class="tab-content">
-        <!-- Pestaña Actualmente -->
-        <div class="tab-pane active" id="actualmente">
+        <!-- Pestaña Actual -->
+        <div class="tab-pane active" id="actual">
           <div class="bio-section bio-margins">
             <ul>
-
+              <li>Profesor de <strong>bandoneón</strong> en el <strong>Conservatorio “Astor Piazzolla”</strong> de la
+                ciudad de Buenos Aires (desde 2018).</li>
+              <li>Profesor de <strong>bandoneón</strong> en la <strong>Universidad Nacional de San Martín</strong>
+                (desde 2013).</li>
               <li>Integra el trío <strong>Patio</strong>, junto a Andrés Pilar y Juan Quintero, desde
                 <strong>2013</strong>.
               </li>
               <li>Actúa en colaboración con el <strong>Diego Schissi Quinteto</strong> desde <strong>2009</strong>.</li>
               <li>Es asistente de dirección de la <strong>Orquesta de Tango de la UNA</strong>, dirigida por Ariel
-                Pirotti.</li>
-              <li>Es profesor de <strong>bandoneón</strong> en el <strong>Conservatorio “Astor Piazzolla”</strong> de la
-                ciudad de Buenos Aires (desde 2018).</li>
-              <li>Es profesor de <strong>bandoneón</strong> en la <strong>Universidad Nacional de San Martín</strong>
-                (desde 2013).</li>
-              <li>Da clases de <strong>bandoneón</strong> y <strong>piano</strong> de forma privada desde
-                <strong>2005</strong>.
-              </li>
-              <li>Lleva adelante <strong>Rúpulo Ediciones</strong>.</li>
+                Pirotti desde 2010.</li>
+              <li>Profesor particular de <strong>bandoneón</strong> y <strong>piano</strong>.</li>
+              <li>Lleva adelante la editorial propia de partituras<strong>Rúpulo Ediciones</strong>.</li>
             </ul>
           </div>
         </div>
