--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <li><a href="#" data-tab="bach">Bach</a></li>
           <li><a href="#" data-tab="composicion">Composición</a></li>
           <li><a href="#" data-tab="patio">Patio</a></li>
-          <li><a href="#" data-tab="dsq">DSQ Quinteto</a></li>
+          <li><a href="#" data-tab="dsq">DSQ</a></li>
           <li><a href="#" data-tab="piano">Piano</a></li>
         </ul>
       </div>
