--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <!-- SECCIÓN VIDEOS CON PESTAÑAS -->
     <section class="seccion" id="videos">
-      <!-- Menú interno de pestañas para categorías -->
+      <!-- Menú interno de pestañas para categorías en contenedor aparte -->
       <div class="video-tabs">
         <ul class="tab-menu">
           <li><a href="#" class="active" data-tab="bandoneon">Bandoneón</a></li>
@@ -78,8 +78,8 @@
           <li><a href="#" data-tab="piano">Piano</a></li>
         </ul>
       </div>
-      <!-- Contenedor de pestañas -->
-      <div class="tab-content">
+      <!-- Contenedor de pestañas de videos -->
+      <div class="video-content tab-content">
         <!-- Pestaña Bandoneón -->
         <div class="tab-pane active" id="bandoneon">
           <div class="video">
