--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
 
     <!-- SECCIÓN INICIO -->
     <section class="seccion" id="inicio">
-      <div
-        style="text-align:center; margin-bottom:18px; color:#e3e3e3; font-size:1.3em; font-weight:500; letter-spacing:0.02em;">
-        Santiago Segret, músico y bandoneonista
+      <div class="hero-title-cool">
+        <span class="hero-title-name">Santiago Segret</span><br>
+        <span class="hero-title-sub">músico, bandoneonista</span>
       </div>
       <div class="video-background">
-        <iframe class="lazy-video"
+        <iframe class="lazy-video main-video"
           data-src="https://www.youtube.com/embed/NamRfKTXcIY?autoplay=1&mute=1&loop=1&controls=0&showinfo=0&modestbranding=1&playlist=NamRfKTXcIY"
           frameborder="0" allow="autoplay; encrypted-media" allowfullscreen loading="lazy"
-          style="width: 900px; height: 506px; max-width: 98vw; max-height: 60vw; pointer-events: none; display: block; margin: 0 auto; border-radius: 12px; box-shadow: 0 4px 24px rgba(0,0,0,0.7);">
+          style="width: 900px; height: 506px; max-width: 98vw; max-height: 60vw; pointer-events: none; display: block; border-radius: 12px; box-shadow: 0 4px 24px rgba(0,0,0,0.7);">
         </iframe>
       </div>
       <div class="inicio-content">
