--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
       <div class="inicio-content">
         <!-- <p>
-          Hhhhola, soy Santiago Segret, músico y bandoneonista. Esta es mi base de datos en internet.
+          Hhhhhola, soy Santiago Segret, músico y bandoneonista. Esta es mi base de datos en internet.
         </p>
         <p>
           En la sección partituras se pueden descargar archivos .pdf de "Rúpulo Ediciones". Material curado
