--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
 <body>
   <nav class="navbar" role="navigation">
-    <button class="menu-toggle" aria-label="Menú">&#9776;</button>
     <ul class="tab-menu">
       <li><a href="#inicio">Inicio</a></li>
       <li><a href="#videos">Videos</a></li>
@@ -595,9 +594,7 @@
 
   </main>
   <script>
-    document.querySelector('.menu-toggle').onclick = function () {
-      document.querySelector('.navbar ul').classList.toggle('open');
-    };
+    // Eliminado el botón de menú hamburguesa
   </script>
   <script src="scripts.js"></script>
 </body>
