--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <ul class="tab-menu">
           <li><a href="#" class="active" data-tab="bandoneon">Bandoneón</a></li>
           <li><a href="#" data-tab="bach">Bach</a></li>
-          <li><a href="#" data-tab="composicion">Composición</a></li>
+          <li><a href="#" data-tab="obras">Obras</a></li>
           <li><a href="#" data-tab="patio">Patio</a></li>
           <li><a href="#" data-tab="dsq">DSQ</a></li>
           <li><a href="#" data-tab="piano">Piano</a></li>
@@ -198,8 +198,8 @@
           </div>
         </div>
 
-        <!-- Pestaña Composición -->
-        <div class="tab-pane" id="composicion">
+        <!-- Pestaña Obras -->
+        <div class="tab-pane" id="obras">
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/8o278V1rhOQ" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
@@ -339,22 +339,21 @@
       <div class="tab-content">
         <!-- Pestaña Actual -->
         <div class="tab-pane active" id="actual">
-          <div class="bio-section bio-margins">
-            <ul>
-              <li>Profesor de <strong>bandoneón</strong> en el <strong>Conservatorio “Astor Piazzolla”</strong> de la
-                ciudad de Buenos Aires (desde 2018).</li>
-              <li>Profesor de <strong>bandoneón</strong> en la <strong>Universidad Nacional de San Martín</strong>
-                (desde 2013).</li>
-              <li>Integra el trío <strong>Patio</strong>, junto a Andrés Pilar y Juan Quintero, desde
-                <strong>2013</strong>.
-              </li>
-              <li>Actúa en colaboración con el <strong>Diego Schissi Quinteto</strong> desde <strong>2009</strong>.</li>
-              <li>Es asistente de dirección de la <strong>Orquesta de Tango de la UNA</strong>, dirigida por Ariel
-                Pirotti desde 2010.</li>
-              <li>Profesor particular de <strong>bandoneón</strong> y <strong>piano</strong>.</li>
-              <li>Lleva adelante la editorial propia de partituras<strong>Rúpulo Ediciones</strong>.</li>
-            </ul>
-          </div>
+          <h3>Actual</h3>
+          <ul>
+            <li>Profesor de <strong>bandoneón</strong> en el <strong>Conservatorio “Astor Piazzolla”</strong> de la
+              ciudad de Buenos Aires (desde 2018).</li>
+            <li>Profesor de <strong>bandoneón</strong> en la <strong>Universidad Nacional de San Martín</strong> (desde
+              2013).</li>
+            <li>Integra el trío <strong>Patio</strong>, junto a Andrés Pilar y Juan Quintero, desde
+              <strong>2013</strong>.
+            </li>
+            <li>Actúa en colaboración con el <strong>Diego Schissi Quinteto</strong> desde <strong>2009</strong>.</li>
+            <li>Es asistente de dirección de la <strong>Orquesta de Tango de la UNA</strong>, dirigida por Ariel Pirotti
+              desde 2010.</li>
+            <li>Profesor particular de <strong>bandoneón</strong> y <strong>piano</strong>.</li>
+            <li>Lleva adelante la editorial propia de partituras <strong>Rúpulo Ediciones</strong>.</li>
+          </ul>
         </div>
 
         <!-- Pestaña Formación -->
