--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <!-- SECCIÓN INICIO -->
     <section class="seccion" id="inicio">
       <div class="hero-title-cool">
-        <span class="hero-title-name">Santiago Segret</span><br>
+        <span class="hero-title-name">Santiago Segret</span>
+        <br>
         <span class="hero-title-sub">músico, bandoneonista</span>
       </div>
       <div class="video-background">
