--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <nav class="navbar" role="navigation">
-    <ul class="tab-menu">
+    <ul class="navbar-tabs tab-menu">
       <li><a href="#inicio">Inicio</a></li>
       <li><a href="#videos">Videos</a></li>
       <li><a href="#premios">Premios</a></li>
@@ -72,7 +72,7 @@
     <section class="seccion" id="videos">
       <!-- Menú interno de pestañas para categorías en contenedor aparte -->
       <div class="video-tabs">
-        <ul class="tab-menu">
+        <ul class="video-tabs tab-menu">
           <li><a href="#" class="active" data-tab="bandoneon">Bandoneón</a></li>
           <li><a href="#" data-tab="bach">Bach</a></li>
           <li><a href="#" data-tab="obras">Obras</a></li>
@@ -82,7 +82,7 @@
         </ul>
       </div>
       <!-- Contenedor de pestañas de videos -->
-      <div class="video-content tab-content">
+      <div class="video-tabs-content tab-content">
         <!-- Pestaña Bandoneón -->
         <div class="tab-pane active" id="bandoneon">
           <div class="video">
@@ -330,14 +330,14 @@
     <section class="seccion" id="bio">
       <!-- Menú interno de pestañas para Bio -->
       <div class="bio-tabs">
-        <ul class="tab-menu">
+        <ul class="bio-tabs tab-menu">
           <li><a href="#" class="active" data-tab="actual">Actual</a></li>
           <li><a href="#" data-tab="formacion">Formación</a></li>
           <li><a href="#" data-tab="inicios">Inicios</a></li>
         </ul>
       </div>
       <!-- Contenedor de pestañas -->
-      <div class="tab-content">
+      <div class="bio-tabs-content tab-content">
         <!-- Pestaña Actual -->
         <div class="tab-pane active" id="actual">
           <h3>Actual</h3>
