--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!-- SECCIÓN VIDEOS CON PESTAÑAS -->
     <section class="seccion" id="videos">
       <!-- Menú interno de pestañas para categorías en contenedor aparte -->
-      <div class="video-tabs">
+      <div class="video-tabs video-tabs-dynamic">
         <ul class="video-tabs tab-menu">
           <li><a href="#" class="active" data-tab="bandoneon">Bandoneón</a></li>
           <li><a href="#" data-tab="bach">Bach</a></li>
@@ -329,7 +329,7 @@
     <!-- SECCIÓN BIO -->
     <section class="seccion" id="bio">
       <!-- Menú interno de pestañas para Bio -->
-      <div class="bio-tabs">
+      <div class="bio-tabs bio-tabs-dynamic">
         <ul class="bio-tabs tab-menu">
           <li><a href="#" class="active" data-tab="actual">Actual</a></li>
           <li><a href="#" data-tab="formacion">Formación</a></li>
